# maldev-for-dummies

./: .gitignore  README.md
.github/: FUNDING.yml
Exercises/BONUS Exercise 1 - Basic Loader Without CreateThread/: README.md
Exercises/BONUS Exercise 1 - Basic Loader Without CreateThread/solutions/C/: BasicShellcodeLoaderNoCreateThread.c
Exercises/BONUS Exercise 1 - Basic Loader Without CreateThread/solutions/csharp/: BasicShellcodeLoaderNoCreateThread.cs
Exercises/BONUS Exercise 1 - Basic Loader Without CreateThread/solutions/golang/: go.mod  main.go
Exercises/BONUS Exercise 1 - Basic Loader Without CreateThread/solutions/nim/: BasicShellcodeLoaderNoCreateThread.nim
Exercises/BONUS Exercise 1 - Basic Loader Without CreateThread/solutions/rust/: Cargo.toml
Exercises/BONUS Exercise 1 - Basic Loader Without CreateThread/solutions/rust/src/: main.rs
Exercises/BONUS Exercise 2 - Basic Injector With Dynamic Target/: README.md
Exercises/BONUS Exercise 2 - Basic Injector With Dynamic Target/solutions/C/: BasicShellcodeInjectorDynamicTarget.c
Exercises/BONUS Exercise 2 - Basic Injector With Dynamic Target/solutions/csharp/: BasicShellcodeInjectorDynamicTarget.cs
Exercises/BONUS Exercise 2 - Basic Injector With Dynamic Target/solutions/golang/: go.mod  main.go
Exercises/BONUS Exercise 2 - Basic Injector With Dynamic Target/solutions/nim/: BasicShellcodeInjectorDynamicTarget.nim
Exercises/BONUS Exercise 2 - Basic Injector With Dynamic Target/solutions/rust/: Cargo.toml
Exercises/BONUS Exercise 2 - Basic Injector With Dynamic Target/solutions/rust/src/: main.rs
Exercises/BONUS Exercise 3 - Basic EDR Evasion/: README.md
Exercises/BONUS Exercise 3 - Basic EDR Evasion/solutions/csharp/: BasicEDREvasion.csproj  BasicEDREvasion.sln  Program.cs  packages.config
Exercises/BONUS Exercise 3 - Basic EDR Evasion/solutions/golang/: BasicEDREvasion.go  go.mod  go.sum
Exercises/BONUS Exercise 3 - Basic EDR Evasion/solutions/nim/: BasicEDREvasion.nim  syscalls.nim
Exercises/BONUS Exercise 3 - Basic EDR Evasion/solutions/rust/: Cargo.toml
Exercises/BONUS Exercise 3 - Basic Injector Using Native APIs/: README.md
Exercises/Exercise 0 - Development Environment/: README.md
Exercises/Exercise 1 - Basic Shellcode Loader/: README.md
Exercises/Exercise 1 - Basic Shellcode Loader/solutions/rust/: Cargo.toml
Exercises/Exercise 1 - Basic Shellcode Loader/solutions/rust/src/: main.rs
Exercises/Exercise 2 - Basic Shellcode Injector/: README.md
Exercises/Exercise 3 - Basic AV Evasion/: README.md
Exercises/Exercise 3 - Basic AV Evasion/solutions/rust/: Cargo.toml
Exercises/Exercise 3 - Basic AV Evasion/solutions/rust/src/: basic_av_evasion.rs  encrypt.rs
(+25 files in other folders)
