[package]
name = "basic_shellcode_loader_without_createthread"
version = "0.1.0"
edition = "2021"

# Some opsec tweaks. Refer to https://github.com/trickster0/OffensiveRust#compiling-the-examples-in-this-repo
[profile.release]
strip = "symbols"
panic = "abort"
trim-path = true
opt-level = "z"
lto = true

# Check out all the crates you can use on https://crates.io
[dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_Threading",
]
